--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-react": "^7.17.12",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
