--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "jquery": "^3.6.0",
     "nodemon": "^2.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
